fixed link overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,3 +62,8 @@ ul {
     list-style-type: none;
     padding: 0;
 }
+
+li {
+    word-wrap: break-word;
+}
+
